tests/snapshots/examples_fixtures/aoc__2025__aoc_day5_part1.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2025/aoc_day5_part1.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `push`.

  examples/aoc/2025/aoc_day5_part1.flx:31:9
   |
31 |         push(push([||], a), b)
   |         ^^^^

Hint:
  Define it first: let push = ...;


error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/aoc/2025/aoc_day5_part1.flx:81:19
   |
81 | let range_lines = [trim(line) | line <- slice(lines, 0, sep), trim(line) != ""]
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Hint:
  Define it first: let map = ...;


error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/aoc/2025/aoc_day5_part1.flx:82:14
   |
82 | let ranges = [parse_range_line(line) | line <- range_lines]
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Hint:
  Define it first: let map = ...;


error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/aoc/2025/aoc_day5_part1.flx:83:16
   |
83 | let id_lines = [trim(line) | line <- slice(lines, sep + 1, len(lines)), trim(line) != ""]
   |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Hint:
  Define it first: let map = ...;


error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/aoc/2025/aoc_day5_part1.flx:84:11
   |
84 | let ids = [parse_int(line) | line <- id_lines]
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Hint:
  Define it first: let map = ...;

Found 5 errors.
== stdout ==
<not executed>
